--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="servicos.html">Serviços</a></li>
-          <li><a href="#">Link3</a></li>
+          <li><a href="blog.html">Blog</a></li>
         </ul>
       </nav>
     </div>
@@ -125,7 +125,7 @@
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="servicos.html">Serviços</a></li>
-          <li><a href="#">link3</a></li>
+          <li><a href="blog.html">Blog</a></li>
         </ul>
       </nav>
       <div class="social">
