--- a/servicos.html
+++ b/servicos.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/utilities.css">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
-  <title>Loruki | Petshop da Familiar</title>
+  <title>Loruki | Serviços</title>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="servicos.html">Serviços</a></li>
-          <li><a href="#">Link3</a></li>
+          <li><a href="blog.html">Blog</a></li>
         </ul>
       </nav>
     </div>
@@ -49,13 +49,52 @@
     </div>
   </section>
 
-section.
-  <div class="card">Hospedagem</div>
-  <div class="card">Plano de Saúde</div>
-  <div class="card">Veterinário</div>
-  <div class="card">Pet Sitter</div>
-  <div class="card">Passeador</div>
-  <div class="card">Creche</div>
+<section class="services-main">
+  <div class="container grid grid-3">
+    <div class="card flex">
+      <i class="fas fa-hotel fa-3x"></i>
+      <p>
+        <span class="text-secondary bold">Hospedagem.</span>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis excepturi, dolores corporis ipsum omnis doloremque in veniam est ipsam quibusdam cumque labore. Explicabo tenetur modi possimus, iure, quas dolores quia incidunt magni nihil atque optio provident deleniti eos ipsa eveniet.
+      </p>
+    </div>
+    <div class="card flex">
+      <i class="fas fa-file-medical fa-3x"></i>
+      <p>
+        <span class="text-secondary bold">Plano de Saúde.</span>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias eius nostrum molestias magnam iure voluptates blanditiis a vitae error saepe. Distinctio numquam iste consectetur porro nemo nihil illo quisquam voluptas!
+      </p>
+    </div>
+    <div class="card flex">
+      <i class="fas fa-user-md fa-3x"></i>
+      <p>
+        <span class="text-secondary bold">Veterinário.</span>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, enim!
+      </p>
+    </div>
+    <div class="card flex">
+      <i class="fas fa-hand-holding-heart fa-3x"></i>
+      <p>
+        <span class="text-secondary bold"><i>Pet Sitter</i>.</span>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, laudantium.
+      </p>
+    </div>
+    <div class="card flex">
+      <i class="fas fa-walking fa-3x"></i>
+      <p>
+        <span class="text-secondary bold">Passeador.</span>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, debitis.
+      </p>
+    </div>
+    <div class="card flex">
+      <i class="fas fa-baby-carriage fa-3x"></i>
+      <p>
+        <span class="text-secondary bold">Creche.</span>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, facere?
+      </p>
+    </div>
+  </div>
+</section>
   
 
 <!-- FOOTER -->
@@ -70,7 +109,7 @@ section.
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="servicos.html">Serviços</a></li>
-          <li><a href="#">link3</a></li>
+          <li><a href="blog.html">Blog</a></li>
         </ul>
       </nav>
       <div class="social">
